canary-demo/blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-blue
  namespace: canary-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
      version: blue
  template:
    metadata:
      labels:
        app: hello
        version: blue
    spec:
      containers:
      - name: hello
        image: hanunhafi22/hello-blue:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
