canary-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  namespace: canary-demo
spec:
  selector:
    app: hello
  ports:
  - port: 80
    targetPort: 80
