canary-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-canary
  namespace: canary-demo
  annotations:
    nginx.org/canary: "true"
    nginx.org/canary-weight: "20"     # 20% traffic ke green
spec:
  ingressClassName: nginx
  rules:
  - host: hello.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-svc
            port:
              number: 80
